objects/Field_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Default_Value__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRA_Field_Label__c</fullName>
        <label>JIRA Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_Field_API_Name__c</fullName>
        <label>Jira Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestTemplate_CREATE__c</fullName>
        <label>RequestTemplate - CREATE</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDC_Field_API__c</fullName>
        <label>SFDC Field API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Field_Label__c</fullName>
        <label>SFDC Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Object_API_Name__c</fullName>
        <label>SFDC Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SFDC To Jira</fullName>
                </value>
                <value>
                    <fullName>Jira To SFDC</fullName>
                    <default>true</default>
                    <label>Jira To SFDC</label>
                </value>
                <value>
                    <fullName>Both</fullName>
                    <isActive>false</isActive>
                    <label>Both</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Field Mappings</label>
    <pluralLabel>Field Mappings</pluralLabel>
</CustomObject>